<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_tipo"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rbtgTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/rbtIndividual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbt_individual" />

        <RadioButton
            android:id="@+id/rbtEnPareja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt_en_pareja" />

        <RadioButton
            android:id="@+id/rbtGrupal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbt_grupal" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_deporte"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spnDeporte"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="30sp" />

</LinearLayout>